<package format="2">
  <name>advanced_objective_training_config</name>
  <version>0.0.0</version>
  <description>...
  </description>
  <license>Proprietary</license>
  <maintainer email="joseph.schornak@picknik.ai">Joe Schornak</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>picknik_ur_gazaebo_config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
